# voxl-camera-server

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  camera-hal3-sample.tar  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  install_on_voxl.sh  make_package.sh
bash_completions/: voxl-configure-cameras
config/: camera_server_config_helper.cpp
include/: rb5_camera_server.h
include/c2d/: c2d_transformer.hpp
include/camera_config/: config_defaults.h  config_file.h
include/common/: common_defs.h  debug_log.h  expgain_interface_modalai.h  gps_pose_subscriber.h  jpeg_size.h  ringbuffer.h
include/config/: config_defaults.h  config_file.h
include/hal3/: buffer_manager.h  hal3_camera.h
include/omx/: omx_video_encoder.h
include/tof-interface/: tof_interface.hpp
include/util/: sync_queue.hpp
list-cameras/: voxl-list-cameras.cpp
misc_files/usr/share/modalai/voxl-camera-server/: camera_config.xml
pkg/control/: control  postinst
rb5-camera-server_0.1.0/DEBIAN/: control
rb5-camera-server_0.1.0/etc/systemd/system/: rb5-camera-server.service
scripts/: apq8096-configure-cameras  qrb5165-configure-cameras  qrb5165-print-camera-configs  test-camera-resolutions-preview  voxl-configure-cameras
service/: voxl-camera-server.service
services/: voxl-camera-server.service
src/: config_file.cpp  hal3_camera_mgr.cpp  omx_video_encoder.cpp  rb5_camera_server_main.cpp  voxl_camera_server_main.cpp
src/c2d/: c2d_transformer.cpp
src/camera_config/: config_defaults.cpp  config_file.cpp
src/common/: common.cpp  debug_log.cpp  expgain_interface_modalai.cpp  gps_pose_subscriber.cpp
src/config/: config_defaults.cpp  config_file.cpp
src/gps/: gps_pose_subscriber.cpp
src/hal3/: buffer_impl_apq8096.cpp  buffer_impl_qrb5165.cpp  buffer_manager.cpp  hal3_camera_core.cpp  hal3_camera_mgr.cpp
src/omx/: omx_video_encoder.cpp
src/tof-interface/: tof_interface.cpp
test/: test_camera_resolutions.sh  voxl-camera-server.conf
